refactor(config-center): extract invitation and company use cases